# parallel-js-plugin-experiment

./: Cargo.toml  benchmark.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  research-for-design.md
.github/workflows/: CI.yml
__test__/: bench.mjs  config.mjs  directWorker.mjs  directWorkerBundler.mjs  directWorkerBundler.test.mjs  directWorkerForBench.mjs  index.spec.mjs  indirectWorker.mjs  initDirectWorker.mjs  initIndirectWorker.mjs  initWorker.mjs  simpleBundler.mjs  simpleBundler.test.mjs  worker.mjs
bench_results/: gen_graph.py
bench_results/diagrams/: diagrams.excalidraw
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: bundler.rs  bundler_creator.rs  direct_worker_bundler.rs  direct_worker_bundler_creator.rs  js_values.rs  lib.rs  plugins.rs  result.rs  simple_bundler.rs
src/js_values/: proxy.rs  value.rs
