[package]
edition = "2021"
name = "parallel-js-plugin-experiment"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.1", default-features = false, features = ["async"] }
napi-derive = "2.16.1"
lazy_static = "1.4.0"
futures = "0.3.30"

[build-dependencies]
napi-build = "2.1.2"

[profile.release]
lto = true
strip = "symbols"
